# rsbp

./: Cargo.toml  LICENSE  README.md
rsbp_rep/: Cargo.toml
rsbp_rep/src/: lib.rs  models.rs  models_ext.rs  res.rs  revision.rs  schema.rs
src/: base.rs  config.rs  forms.rs  lib.rs  main.rs  res.rs  services.rs
src/apis/: enums.rs  services.rs
src/base/: functions.rs  parameter.rs
src/forms/: ad.rs  ag.rs  am.rs  bin.rs  controls.rs  main_window.rs  tb.rs  ui_tools.rs
src/forms/ad/: ad120_birthdays.rs
src/forms/ag/: ag100_clients.rs  ag110_client.rs  ag200_users.rs  ag210_user.rs
src/forms/am/: am000_login.rs  am100_change.rs  am510_dialogs.rs
src/forms/tb/: tb100_diary.rs  tb110_date.rs  tb200_positions.rs  tb210_position.rs
src/res/: messages.rs  tables.xml
src/res/gtkgui/: MainWindow.glade
src/res/gtkgui/ad/: AD120Birthdays.glade
src/res/gtkgui/ag/: AG100Clients.glade  AG110Client.glade  AG200Users.glade  AG210User.glade
src/res/gtkgui/am/: AM000Login.glade  AM100Change.glade  AM510Dialogs.glade
src/res/gtkgui/tb/: TB100Diary.glade  TB110Date.glade  TB200Positions.glade  TB210Position.glade
src/services/: address_service.rs  client_service.rs  diary_service.rs  https_server.rs  login_service.rs  reps.rs  undo.rs
src/services/reps/: ad_person.rs  benutzer.rs  ma_mandant.rs  ma_parameter.rs  tb_eintrag.rs  tb_eintrag_ort.rs  tb_ort.rs
